# pump-fun-sniper-bot

./: .flake8  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  sample.env
src/: bot.py  constants.py  parser.py  storage.py  utils.py
src/models/: token.py  transaction.py
src/transactions/: pumpportal_transaction.py  rpc_transaction.py
tests/: conftest.py  test_bot.py  test_parser.py  test_storage.py  test_utils.py
tests/etc/transactions/: buy.json  create.json  sell.json
tests/models/: test_token.py  test_transaction.py
tests/transactions/: test_pumpportal_transaction.py
